2000-12-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Bill contributed a `lines' dump format to
	print line numbers of definitions. He contributed also a patch
	that allows the `identifiers' format to report identifiers with
	OID definitions that could not be resolved (as in {mib-2 xxx}).

	* lib/parser-smi.h: Bill added special handling for unintentionally
	terminated comments and hints on definitions that could be imported
	from more recent modules.

2000-12-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/dump-*.c: More patches from Juergen. Most drivers are
	now `-o file' aware. The `imports' driver does no longer hang
	in an endless loop on recursive imports.

2000-12-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-*.h: yyerror-verbose is now non-optional.

	* tools/dump-*.c: Juergen fixed various dump drivers. `cm' is
	now a single format with an `explain' option. Man pages are
	updated to include long options.

2000-12-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-*.c: Fixes from Juergen.

2000-12-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/NOTIFICATION-LOG-MIB: added (RFC 3014).

	* mibs/ietf/FR-MFR-MIB: added (RFC 3020).

2000-12-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.12.tar.gz: released version 0.2.12.

	* configure.in: Bill added --with-yyerror-verbose option.

	* lib/parser-smi.y: Patch from Bill: Reset capabilitiesModulePtr
	at the end of each module. Fixed typo in unsigned32. Fixed
	flawed data structures for Opaque as well. Removed a bunch of
	unnecessary setTypeParent() and setTypeDecl() calls.

2000-12-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed `GAUGE32 integerSubType' rule.

	* lib/parser-smi.y: Fixed flawed data structures in case of
	illegal range sub-typing of enum types and enum sub-typing of
	range restricted integer types. Thanks to Bill for the hints.

2000-11-30  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
